--- a/problems/asignment2.ipynb
+++ b/problems/asignment2.ipynb
@@ -1316,9 +1316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
@@ -1337,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,9 +1402,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading avocado mesh from Open3D dataset...\n",
+      "Mesh Dimensions Original:\n",
+      "- Width: 0.04\n",
+      "- Height: 0.06\n",
+      "- Depth: 0.03\n",
+      "Mesh Dimensions After Scaling:\n",
+      "- Width: 0.05\n",
+      "- Height: 0.08\n",
+      "- Depth: 0.03\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "obj_name = 'avocado'\n",
@@ -1417,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,6 +1504,31 @@
     "        # Return the rotation as rotation matrix + translation\n",
     "        # Translation implies translation from a center point\n",
     "        ############################TODO############################\n",
+    "        theta = np.random.uniform(0, 2*np.pi)\n",
+    "\n",
+    "        phi = np.random.uniform(0, np.pi)\n",
+    "        # this creates a lot of points around the pole. The points are not uniformly distributed around the sphere.\n",
+    "        # There is some transformation that can be applied to the random variable to remedy this issue, TODO look into that\n",
+    "\n",
+    "        phi = np.arccos(1 - 2 * np.random.uniform(0, 1))\n",
+    "        r = np.random.uniform(0, offset)\n",
+    "\n",
+    "        x = r * np.sin(phi) * np.cos(theta)\n",
+    "        y = r * np.sin(phi) * np.sin(theta)\n",
+    "        z = r * np.cos(phi)\n",
+    "        grasp_center = center_point + np.array([x, y, z])\n",
+    "\n",
+    "        axis = np.random.normal(size=3)\n",
+    "        axis /= np.linalg.norm(axis)\n",
+    "        angle = np.random.uniform(0, 2 * np.pi)\n",
+    "\n",
+    "        K =  np.array([\n",
+    "            [0, -axis[2], axis[1]],\n",
+    "            [axis[2], 0, -axis[0]],\n",
+    "            [-axis[1], axis[0], 0],\n",
+    "        ])\n",
+    "        R = np.eye(3) + np.sin(angle)*K + (1 - np.cos(angle))*K.dot(K)\n",
+    "\n",
     "\n",
     "        ######################################################\n",
     "        assert R.shape == (3, 3)\n",
@@ -1496,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,6 +1555,10 @@
     "\n",
     "#######################TODO######################\n",
     "\n",
+    "all_grasp_meshes = []\n",
+    "for grasp in sample_grasp_lists:\n",
+    "    R, grasp_center = grasp\n",
+    "    all_grasp_meshes.append(create_grasp_mesh(center_point=grasp_center, rotation_matrix=R))\n",
     "\n",
     "##################################################\n",
     "vis_meshes = [mesh, coordinate_frame]\n",
@@ -1550,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1694,8 @@
     "                      tolerance: float = 0.05)->bool:\n",
     "    is_within_range = False\n",
     "    #######################TODO#######################\n",
-    "\n",
+    "    if np.linalg.norm(center_grasp - mesh_center) < tolerance:\n",
+    "        is_within_range = True\n",
     "    ##################################################\n",
     "    return is_within_range"
    ]
@@ -1653,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
