need to add scoring for grips

--- a/problems/asignment2.ipynb
+++ b/problems/asignment2.ipynb
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,12 +1635,22 @@
     "    # Sample points from both meshes\n",
     "    num_points = 5000 # Subsample both meshes to this many points\n",
     "    #######################TODO#######################\n",
+    "    gripper_pcl = combined_gripper.sample_points_uniformly(number_of_points=num_points)\n",
+    "    object_pcl = object_mesh.sample_points_uniformly(number_of_points=num_points)\n",
     "\n",
     "    ##################################################\n",
     "    # Build KDTree for object points\n",
     "    is_collision = False\n",
     "    #######################TODO#######################\n",
-    "\n",
+    "    object_kd_tree = o3d.geometry.KDTreeFlann(object_pcl)\n",
+    "    collision_count = 0\n",
+    "    for point in gripper_pcl.points:\n",
+    "        # Find the nearest neighbor distance\n",
+    "        [_, idx, distances] = object_kd_tree.search_knn_vector_3d(point, 1)\n",
+    "        if distances[0] < tolerance:\n",
+    "            collision_count += 1\n",
+    "            if collision_count >= num_colisions:\n",
+    "                return True  # Collision detected\n",
     "\n",
     "    #######################TODO#######################\n",
     "\n",
@@ -1656,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
